fixed some overflow issues with the body tag

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@ html,
 body {
     height: 100%;
     color: white;
+    overflow: auto;
 }
 
 body {
